## Makefile.am
##
## Process this file with automake to produce Makefile.in

asn_DATA = GenericChargingDataTypes.asn1 \
		IMSChargingDataTypes.asn1
#		CSChargingDataTypes.asn1 \
#		GPRSChargingDataTypes.asn1 \
#		MMTelChargingDataTypes.asn1 \
#		SMSChargingDataTypes.asn1 \
#		MMSChargingDataTypes.asn1 \
#		CPDTChargingDataTypes.asn1 \
#		MBMSChargingDataTypes.asn1 \
#		POCChargingDataTypes.asn1 \
#		LCSChargingDataTypes.asn1 \
#		ProSeChargingDataTypes.asn1 \
#		MONTEChargingDataTypes.asn1 \
#		CHFChargingDataTypes.asn1 \
#		ExposureFunctionAPIChargingDataTypes.asn1

