## Makefile.am
##
## Process this file with automake to produce Makefile.in

asn_DATA = ACSE-1.asn1 \
		Attribute-ASN1Module.asn1 \
		Basic-Service-Elements.asn1 \
		CMIP-1.asn1 \
		InformationFramework.asn1 \
		SS-DataTypes.asn1 \
		GenericChargingDataTypes.asn1 \
		IMSChargingDataTypes.asn1 \
		CSChargingDataTypes.asn1 \
		GPRSChargingDataTypes.asn1 \
		MMTelChargingDataTypes.asn1 \
		SMSChargingDataTypes.asn1 \
		MMSChargingDataTypes.asn1 \
		CPDTChargingDataTypes.asn1 \
		MBMSChargingDataTypes.asn1 \
		POCChargingDataTypes.asn1 \
		LCSChargingDataTypes.asn1 \
		ProSeChargingDataTypes.asn1 \
		MONTEChargingDataTypes.asn1 \
		CHFChargingDataTypes.asn1 \
		ExposureFunctionAPIChargingDataTypes.asn1 \
		TAP-0312.asn1
